aggiornato inmemoryuser e pt launcher e launcher controller